# simple-auth

./: .dockerignore  .gitignore  compose.env  compose.yml  docker-compose.env  docker-compose.yml  vite.env
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
backend/: Dockerfile  logging.yml  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/api/: config.py  database.py  main.py  schemas.py
backend/api/routers/: admin.py  login.py  users.py
backend/api/service/: auth.py
backend/docker/: .dockerignore  Dockerfile  Dockerfile.dev
backend/qftb/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/qftb/routers/: admin.py  auth.py  health.py  login.py  users.py
backend/qftb/service/: auth.py  auth_service.py  user_service.py
backend/qftb/util/: openapi.py  password.py
backend/tests/: conftest.py
backend/tests/routers/: test_users.py
backend/tests/service/: test_auth.py
k8s/: db-deployment.yaml  docker-compose-env-configmap.yaml  fastapi-deployment.yaml  fastapi-service.yaml  ui-deployment.yaml  ui-service.yaml
ui/: Dockerfile  jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/.devcontainer/: devcontainer.json
ui/docker/: .dockerignore  Dockerfile
ui/src/: App.tsx  AuthProvider.tsx
ui/src/components/: Header.css  Header.tsx  ProtectedRoute.tsx
ui/src/config/: config.ts
ui/src/contexts/: AuthProvider.tsx
ui/src/pages/: Error.tsx  Home.css  Home.tsx  Login.css  Login.tsx  ProtectedRoute.tsx  Root.tsx  User.tsx
ui/src/services/: authService.test.ts  authService.ts  models.ts  userService.ts
