[tool.poetry]
name = "fastapi-template"
version = "0.0.0"
description = "Fastapi, devcontainer, poetry boilerplate with auth"
authors = ["Seth Greco"]
readme = "README.md"
packages = [{ include = "qftb" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
argon2-cffi = "^23.1.0"
python-jose = "^ 3.3.0"
pydantic = "^2.9.2"

[tool.poetry.dev-dependencies]
ruff = "^0.3.0"
pytest = "^7.4.3"


[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["lib", "tests"]


[tool.ruff]
src = ["qftb"]
line-length = 100
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle (supersedes pep8)
    "F",  # pyflakes
    "I",  # isort
    "W"
]
preview = true
